# aind-ephys-portal

./: .gitignore  Dockerfile  README.md  launch.sh  pyproject.toml
.github/wokrflows/: publish_main.yaml
.github/workflows/: publish_dev.yaml
src/aind_ephys_portal/: __init__.py  ephys_gui_app.py  ephys_launcher_app.py  ephys_monitor_app.py  ephys_portal_app.py  monitor.py  setup.py
src/aind_ephys_portal/docdb/: __init__.py  database.py
src/aind_ephys_portal/panel/: __init__.py  ephys_gui.py  ephys_portal.py  logging.py  search.py  utils.py
src/aind_sigui_portal/: app_portal.py  app_sigui.py
src/aind_sigui_portal/docdb/: database.py
src/aind_sigui_portal/panel/: search.py  sigui_portal.py  sigui_view.py  utils.py
tests/: test_bidirectional_communication.py
