[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-sigui-portal"
version = "0.1.0"
description = "AIND SIGUI Portal - A Panel application for SIGUI data visualization"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
dependencies = [
    "panel>=1.0.0",
    "param>=1.12.0",
    "aind-data-access-api>=0.1.0",
    "pandas>=1.2.0",
    "numpy>=1.20.0",
    "boto3"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/AllenNeuralDynamics/aind-sigui-portal"
"Bug Tracker" = "https://github.com/AllenNeuralDynamics/aind-sigui-portal/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
aind-sigui-portal = "aind_sigui_portal.serve:serve"
