[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-ephys-portal"
version = "0.1.0"
description = "AIND Ephys Portal - A Panel application for Ephys data visualization"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
dependencies = [
    "panel>=1.0.0,<1.6.2",
    "param>=1.12.0",
    "aind-data-access-api>=0.1.0",
    "spikeinterface[full]>=0.102.0",
    "pandas>=1.2.0",
    "numpy>=1.20.0",
    "boto3",
    "s3fs>=2025.2.0",
    "numcodecs<0.16.0",
    "spikeinterface-gui"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/AllenNeuralDynamics/aind-ephys-portal"
"Bug Tracker" = "https://github.com/AllenNeuralDynamics/aind-ephys-portal/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
